# terminal-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/terminal_mcp/: __init__.py  executor.py  main.py  security.py  server.py
src/windows_terminal_mcp/: __init__.py  executor.py  main.py  security.py  server.py
tests/: test_terminal_mcp.py  test_windows_terminal_mcp.py
