[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-terminal-mcp"
version = "0.2.0"
description = "MCP server that lets any LLM execute commands on a Windows terminal, including SSH"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Marchetto", email = "martin.marchetto@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/marttinm/windows-terminal-mcp"
Issues = "https://github.com/marttinm/windows-terminal-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]
