[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-mcp"
version = "0.3.0"
description = "MCP server that lets any LLM execute terminal commands on Windows and macOS, including SSH"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Martin Marchetto", email = "martin.marchetto@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
]

[project.urls]
Homepage = "https://github.com/marttinm/terminal-mcp"
Issues = "https://github.com/marttinm/terminal-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
